objects/Time_Sheet__c/Time_Sheet__c.object-meta.xml
<CustomObject>
    <label>Dev Time Sheet</label>
    <nameField>
        <label>TS Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev Time Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>