objects/Time_Sheet__c/fields/Dev_Item__c.field-meta.xml
<CustomField>
    <fullName>Dev_Item__c</fullName>
    <label>Dev Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Development_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Development_Item__c</referenceTo>
    <relationshipName>Time_Sheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>