objects/Time_Sheet__c/fields/TS_Approved__c.field-meta.xml
<CustomField>
    <fullName>TS_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approved by TrackIt</description>
    <label>TS Approved</label>
    <type>Checkbox</type>
</CustomField>