objects/Time_Sheet__c/fields/TS_Date__c.field-meta.xml
<CustomField>
    <fullName>TS_Date__c</fullName>
    <description>Date the time was executed.</description>
    <label>TS Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>