objects/Time_Sheet__c/fields/TS_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>TS_Long_Description__c</fullName>
    <label>TS Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>